@@ -141,7 +141,19 @@ star_map_unmapped_mirbase_reads_reference:
     time: 100
     cpus-per-task: 5
     mem-per-cpu: 8000
+ 
+samtools_clear_reads_mature_flagstats:
+    job-name: samtools_clear_reads_mature_flagstats
+    time: 300
+
+samtools_star_reads_mature_flagstats:
+    job-name: samtools_star_reads_mature_flagstats
+    time: 300
     
+seqkit_quantify_mature_BOWTIE:
+    job-name: seqkit_quantify_mature_BOWTIE
+    time: 300
+
 # Module 5 - Quantification
 ################################################################################
 seqkit_quantify_maturefa_BOWTIE:
